--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"অনাতাঁৰ জৰুৰীকালীন সতৰ্কবাৰ্তাসমূহ"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"অনাতাঁৰ জৰুৰীকালীন সতৰ্কবাৰ্তাসমূহ"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"ৱায়াৰলেছ জৰুৰীকালীন সতৰ্কবাৰ্তাসমূহ"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"তথ্যসমৃদ্ধ জাননী"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"অনাতাঁৰ জৰুৰীকালীন সতৰ্কবাৰ্তাসমূহ"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"তথ্যসমৃদ্ধ জাননী"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"এই ব্যৱহাৰকাৰীৰ বাবে অনাতাঁৰ জৰুৰীকালীন সতৰ্কবাৰ্তাৰ ছেটিংসমূহ উপলব্ধ নহয়"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"ঠিক আছে"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"পূৰ্বৰ কোনো সতৰ্কতা নাই"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"সতৰ্কবাণীযুক্ত বাৰ্তাসমূহ লাভ কৰিবলৈ অনুমতি দিয়ক"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"অনাতাঁৰ জৰুৰীকালীন সতৰ্কবাৰ্তাৰ জাননীসমূহ পাওক"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"সতৰ্কতা স্মৰণ কৰোৱাৰ সুবিধা"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"সতৰ্কবাণী পঢ়ি শুনাওক"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"অনাতাঁৰ জৰুৰীকালীন সতৰ্কবাৰ্তাৰ বাৰ্তাসমূহ ক’বলৈ পাঠৰ পৰা কথনৰ সুবিধাটো ব্যৱহাৰ কৰক"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"কোনো স্বাভাৱিক ভলিউমত ৰিমাইণ্ডাৰ ধ্বনি প্লে\' হ\'ব"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"জৰুৰীকালীন সতৰ্কবাণীৰ ইতিহাস"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"সতর্কতা সম্পৰ্কীয় অগ্ৰাধিকাৰসমূহ"</string>
