--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"Bežična obaveštenja o hitnim slučajevima"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"Bežična obaveštenja o hitnim slučajevima"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"Bežična obaveštenja o hitnim slučajevima"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"Informativno obaveštenje"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"Bežična upozorenja o hitnim slučajevima"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"Informativno obaveštenje"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"Podešavanja bežičnih obaveštenja o hitnim slučajevima nisu dostupna za ovog korisnika"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"Potvrdi"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"Nema prethodnih obaveštenja"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Dozvoli obaveštenja"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Šalji mi bežična obaveštenja o hitnim slučajevima"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Podsetnik za obaveštenja"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"Izgovori poruku obaveštenja"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"Koristi pretvaranje teksta u govor za izgovaranje poruka bežičnih obaveštenja o hitnim slučajevima"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Zvuk podsetnika će biti normalne jačine"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Istorija hitnih obaveštenja"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"Podešavanja obaveštenja"</string>
