--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"Hari gabeko larrialdi-alertak"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"Hari gabeko larrialdi-alertak"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"Hari gabeko larrialdi-alertak"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"Informazioa emateko jakinarazpena"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"Hari gabeko larrialdi-alertak"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"Informazioa emateko jakinarazpena"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"Erabiltzaile honek ez ditu erabilgarri hari gabeko larrialdi-alerten ezarpenak"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"Ados"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"Ez dago aurreko alertarik"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Baimendu alertak"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Jaso hari gabeko larrialdi-alerten jakinarazpenak"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Alerta-egoeraren abisua"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"Irakurri alerta-mezua ozen"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"Erabili testua ahots bihurtzeko eginbidea hari gabeko larrialdi-alertak ozen irakurtzeko"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Abisu-soinu batek joko du ohiko bolumenean"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Larrialdi-alerten historia"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"Alerten hobespenak"</string>
