--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"વાયરલેસ ઇમર્જન્સી અલર્ટ"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"વાયરલેસ ઇમર્જન્સી અલર્ટ"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"વાયરલેસ ઇમર્જન્સી અલર્ટ"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"માહિતી આપતું નોટિફિકેશન"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"વાયરલેસ ઇમર્જન્સી અલર્ટ"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"માહિતી આપતું નોટિફિકેશન"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"આ વપરાશકર્તા માટે વાયરલેસ ઇમર્જન્સી અલર્ટના સેટિંગ ઉપલબ્ધ નથી"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"ઓકે"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"કોઈ પાછલી અલર્ટ નથી"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"ચેતવણીઓને મંજૂરી આપો"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"વાયરલેસ ઇમર્જન્સી અલર્ટના નોટિફિકેશન પ્રાપ્ત કરો"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"ચેતવણી આપતું રિમાઇન્ડર"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"ચેતવણી સંદેશ બોલો"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"વાયરલેસ ઇમર્જન્સી અલર્ટ સંદેશા બોલવા માટે ટેક્સ્ટ ટૂ સ્પીચનો ઉપયોગ કરો"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"રીમાઇન્ડરનો સાઉન્ડ નિયમિત વૉલ્યૂમ પર વાગશે"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"કટોકટીની ચેતવણીનો ઇતિહાસ"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"ચેતવણીની પસંદગીઓ"</string>
