--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"वायरलेस इमरजेंसी अलर्ट"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"वायरलेस इमरजेंसी अलर्ट"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"वायरलेस इमरजेंसी अलर्ट"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"जानकारी देने वाली सूचना"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"वायरलेस इमरजेंसी अलर्ट"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"जानकारी देने वाली सूचना"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"यह उपयोगकर्ता, वायरलेस इमरजेंसी अलर्ट की सूचनाओं की सेटिंग में बदलाव नहीं कर सकता"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"ठीक है"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"पहले का किसी भी तरह का अलर्ट मौजूद नहीं है"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"चेतावनी दिखाए जाने की अनुमति दें"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"वायरलेस इमरजेंसी अलर्ट की चेतावनी पाएं"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"याद दिलाने के लिए अलर्ट"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"अलर्ट मैसेज बोलें"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"वायरलेस इमरजेंसी अलर्ट वाला मैसेज बोलने के लिए लिखाई को बोली में बदलने की सुविधा इस्तेमाल करें"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"रिमांइडर की रिंगटोन की आवाज़ सामान्य रहेगी"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"इमरजेंसी के समय की सूचनाओं का इतिहास"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"चेतावनी से जुड़ी पसंद"</string>
