--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"התראות אלחוטיות על מקרי חירום"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"התראות אלחוטיות על מקרי חירום"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"התראות אלחוטיות על מקרי חירום"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"הודעה אינפורמטיבית"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"התראות אלחוטיות על מקרי חירום"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"הודעה אינפורמטיבית"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"הגדרות של התראות אלחוטיות על מקרי חירום לא זמינות למשתמש זה"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"אישור"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"אין התרעות קודמות"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"הצגת התרעות"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"לקבלת התראות אלחוטיות על מקרי חירום"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"תזכורת התרעה"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"הודעת התרעה תושמע בקול"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"‏שימוש בהמרת טקסט לדיבור (TTS) להקראה של התראות אלחוטיות על מקרי חירום"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"צליל תזכורת יושמע בעוצמת שמע רגילה"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"היסטוריה של התרעות חירום"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"העדפות להתרעות"</string>
