--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"ការជូនដំណឹងពេល​មានអាសន្ន​ដោយឥតប្រើខ្សែ"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"ការជូនដំណឹងពេល​មានអាសន្ន​ដោយឥតប្រើខ្សែ"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"ការប្រកាសអាសន្ន​តាមប្រព័ន្ធឥតខ្សែ"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"ការជូនដំណឹង​សម្រាប់ជាព័ត៌មាន"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"ការប្រកាសអាសន្ន​តាមប្រព័ន្ធឥតខ្សែ"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"ការជូនដំណឹង​សម្រាប់ជាព័ត៌មាន"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"មិនអាចប្រើ​ការកំណត់ការជូនដំណឹងពេលមាន​អាសន្នដោយឥតប្រើខ្សែ​សម្រាប់អ្នកប្រើប្រាស់នេះ​បានទេ"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"យល់​ព្រម​"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"មិន​មាន​ការជូនដំណឹង​ពីមុន​ទេ"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"អនុញ្ញាត​ការជូន​ដំណឹង"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"ទទួលបានការជូនដំណឹង​ពេលមានអាសន្នដោយឥតប្រើខ្សែ"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"ការរំលឹកអំពីការជូន​ដំណឹង"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"អាន​​សារ​ជូន​ដំណឹង"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"ប្រើការបំប្លែងអត្ថបទ​ទៅជាការនិយាយ ដើម្បីអានសារ​ជូនដំណឹង​ពេលមាន​អាសន្នដោយឥតប្រើខ្សែ"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"សំឡេងរំលឹក​នឹងបន្លឺឡើងនៅ​កម្រិតសំឡេង​ធម្មតា"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"ប្រវត្តិការជូនដំណឹង​ពេលអាសន្ន"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"ចំណូលចិត្តការជូនដំណឹង"</string>
