--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"무선 긴급 경보"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"무선 긴급 경보"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"무선 긴급 알림"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"정보 알림"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"무선 긴급 알림"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"안전 안내 문자"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"이 사용자는 무선 긴급 경보 알림 설정을 사용할 수 없습니다."</string>
     <string name="button_dismiss" msgid="1234221657930516287">"확인"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"이전 경보 없음"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"경보 허용"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"무선 긴급 경보 알림 수신"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"경보 알림"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"경보 메시지를 음성 언어로 표시"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"무선 긴급 경보 메시지를 TTS(텍스트 음성 변환) 기능을 사용하여 음성으로 알림"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"경보 알림음이 보통 볼륨으로 재생됨"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"긴급 경보 기록"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"경보 환경설정"</string>
