--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"Зымсыз тармактардан келген шашылыш билдирүүлөр"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"Зымсыз тармактардан келген шашылыш билдирүүлөр"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"Зымсыз тармактардан келген шашылыш билдирүүлөр"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"Маалыматтык билдирме"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"Зымсыз тармактардан келген шашылыш билдирүүлөр"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"Маалыматтык билдирме"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"Бул колдонуучу үчүн зымсыз шашылыш билдирүүлөрдүн жөндөөлөрү жеткиликсиз"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"OK"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"Эски билдирүүлөр жок"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Шашылыш билдирүүлөргө уруксат берүү"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Зымсыз тармактар аркылуу шашылыш билдирүүлөр келип турат"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Кабарлардын мезгилдүүлүгү"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"Шашылыш билдирүүнү угуу"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"Шашылыш билдирүүнү угуу үчүн кеп синтезаторун колдонуңуз"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Эстеткичтин үнү демейки катуулукта угулат"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Шашылыш билдирүүлөрдүн таржымалы"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"Шашылыш билдирүүнүн параметрлери"</string>
@@ -108,7 +114,7 @@
     <string name="cmas_response_assess" msgid="9043534222710563415">"Баалоо"</string>
     <string name="cmas_response_none" msgid="5149009359674452959">"Эч нерсе жок"</string>
     <string name="cmas_severity_heading" msgid="8437057117822305243">"Олуттуулугу:"</string>
-    <string name="cmas_severity_extreme" msgid="1312013282860183082">"Өтө коркунучтуу"</string>
+    <string name="cmas_severity_extreme" msgid="1312013282860183082">"Кескин"</string>
     <string name="cmas_severity_severe" msgid="7504359209737074524">"Олуттуу"</string>
     <string name="cmas_urgency_heading" msgid="8218282767913431492">"Шашылыштыгы:"</string>
     <string name="cmas_urgency_immediate" msgid="1577485208196449288">"Дароо"</string>
