--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"आणीबाणीमधील वायरलेस इशारा"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"आणीबाणीमधील वायरलेस इशारा"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"आणीबाणीशी संबंधित वायरलेस सूचना"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"माहितीपूर्ण सूचना"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"वायरलेस आणीबाणी सूचना"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"माहितीपूर्ण सूचना"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"या वापरकर्त्यासाठी आणीबाणीमधील वायरलेस इशारा सेटिंग्ज उपलब्ध नाही"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"ठीक आहे"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"यापूर्वीचे अलर्ट नाहीत"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"सूचनांना अनुमती द्या"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"आणीबाणीमधील वायरलेस इशारा सूचना स्वीकारा"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"सूचना स्मरणपत्र"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"सूचना मेसेज बोला"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"आणीबाणीमधील वायरलेस इशारा मेसेज बोलण्यासाठी टेक्स्ट-टू-स्पीच वापरा"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"नियमित व्हॉल्यूमवर एक रिमाइंडर आवाज प्ले होईल"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"आणीबाणी सूचना इतिहास"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"सूचना प्राधान्ये"</string>
