--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"ୱେୟାରଲେସ୍ ଜରୁରୀକାଳୀନ ଆଲର୍ଟ"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"ୱେୟାରଲେସ୍ ଜରୁରୀକାଳୀନ ଆଲର୍ଟ"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"ୱେୟାରଲେସ୍ ଜରୁରୀକାଳୀନ ଆଲର୍ଟ"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"ସୂଚନାଭିତ୍ତିକ ବିଜ୍ଞପ୍ତି"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"ୱେୟାରଲେସ୍ ଜରୁରୀକାଳୀନ ଆଲର୍ଟ"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"ସୂଚନାଭିତ୍ତିକ ବିଜ୍ଞପ୍ତି"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"ଏହି ବ୍ୟବହାରକାରୀଙ୍କ ପାଇଁ ୱେୟାରଲେସ୍ ଜରୁରୀକାଳୀନ ଆଲର୍ଟ ସେଟିଂସ୍ ଉପଲବ୍ଧ ନାହିଁ"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"ଠିକ ଅଛି"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"ପୂର୍ବର କୌଣସି ଆଲର୍ଟ ନାହିଁ"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"ଆଲର୍ଟକୁ ଅନୁମତି ଦିଅନ୍ତୁ"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"ୱେୟାରଲେସ୍ ଜରୁରୀକାଳୀନ ଆଲର୍ଟ ବିଜ୍ଞପ୍ତି ପ୍ରାପ୍ତ କରନ୍ତୁ"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"ଆଲର୍ଟ ରିମାଇଣ୍ଡର"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"ଆଲର୍ଟ ମେସେଜ୍‌ କୁହନ୍ତୁ"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"ୱେୟାରଲେସ୍ ଜରୁରୀକାଳୀନ ଆଲର୍ଟ ମେସେଜ୍ କହିବା ପାଇଁ \"ଟେକ୍ସଟ୍-ଟୁ-ସ୍ପିଚ୍\" ବ୍ୟବହାର କରନ୍ତୁ"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"ଏକ ରିମାଇଣ୍ଡର୍ ସାଉଣ୍ଡ ରେଗୁଲାର୍ ଭଲ୍ୟୁମରେ ପ୍ଲେ ହେବ"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"ଜରୁରୀକାଳୀନ ଆଲର୍ଟ ଇତିହାସ"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"ନିଜ ପସନ୍ଦର ଆଲର୍ଟ"</string>
