--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"Alertas de emergência sem fios"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"Alertas de emergência sem fios"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"Alertas de emergência sem fios"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"Notificação informativa"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"Alertas de emergência sem fios"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"Notificação informativa"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"As definições de alertas de emergência não estão disponíveis para este utilizador."</string>
     <string name="button_dismiss" msgid="1234221657930516287">"OK"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"Não existem alertas anteriores."</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Permitir alertas"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Receber notificações de alerta de emergência sem fios"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Lembrete de alerta"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"Dizer mensagem de alerta"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"Utilize a síntese de voz para dizer mensagens de alertas de emergência sem fios."</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Será reproduzido um som de lembrete com o volume normal"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Histórico de alertas de emergência"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"Preferências de alerta"</string>
