--- a/res/values-sq/strings.xml
+++ b/res/values-sq/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"Sinjalizimet me valë të urgjencës"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"Sinjalizimet me valë të urgjencës"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"Sinjalizimet me valë të urgjencës"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"Njoftim informues"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"Sinjalizimet me valë të urgjencës"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"Njoftim informues"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"Cilësimet e sinjalizimeve me valë të urgjencës nuk ofrohen për këtë përdorues"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"Në rregull"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"Asnjë alarm i mëparshëm"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Lejo sinjalizimet"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Merr njoftimet e sinjalizimeve me valë të urgjencës"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Alarmet rikujtuese"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"Dëgjo mesazhin e alarmit"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"Përdor tekstin-në-ligjërim që të lexohen me zë mesazhet e sinjalizimeve me valë të urgjencës"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Një tingull alarmi rikujtues do të luhet me volum të rregullt"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Historiku i sinjalizimeve të urgjencës"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"Preferencat për sinjalizimet"</string>
