--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"వైర్‌లెస్ ఎమర్జెన్సీ అలర్ట్‌లు"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"వైర్‌లెస్ ఎమర్జెన్సీ అలర్ట్‌లు"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"వైర్‌లెస్ ఎమర్జెన్సీ అలర్ట్‌లు"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"సమాచారం అందించే నోటిఫికేషన్"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"వైర్‌లెస్ ఎమర్జెన్సీ అలర్ట్‌లు"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"సమాచారం అందించే నోటిఫికేషన్"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"ఈ వినియోగదారుకి వైర్‌లెస్ అత్యవసర హెచ్చరిక సెట్టింగ్‌లు అందుబాటులో లేవు"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"సరే"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"మునుపటి హెచ్చరికలు లేవు"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"అలర్ట్‌లను అనుమతించండి"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"వైర్‌లెస్ ఎమర్జెన్సీ అలర్ట్ నోటిఫికేషన్‌లను పొందండి"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"హెచ్చరిక రిమైండర్"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"హెచ్చరిక సందేశాన్ని చదివి వినిపించు"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"అత్యవసర హెచ్చరిక సందేశాలను చదివి వినిపించడానికి వచనం-నుండి-ప్రసంగంను ఉపయోగించు"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"రిమైండర్ శబ్దం క్రమ విరామాల వద్ద ప్లే అవుతుంది"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"ఎమర్జెన్సీ అలర్ట్‌ల చరిత్ర"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"హెచ్చరిక ప్రాధాన్యతలు"</string>
