--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -18,8 +18,10 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"Simsiz favqulodda ogohlantirishlar"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"Simsiz favqulodda ogohlantirishlar"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"Aholini ogohlantirish"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"Axborotli bildirishnoma"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"Aholini ogohlantirish"</string>
+    <string name="sms_cb_sender_name_presidential" msgid="5302753979711319380">"Aholini ogohlantirish"</string>
+    <string name="sms_cb_sender_name_emergency" msgid="2937067842997478965">"Aholini ogohlantirish"</string>
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"Axborotli bildirishnoma"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"Simsiz favqulodda ogohlantirishlar sozlamalari bu foydalanuvchi uchun yopiq"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"OK"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"Hech qanday ogohlantirish topilmadi"</string>
@@ -59,6 +61,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Ogohlantirishlarga ruxsat"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Simsiz favqulodda ogohlantirishlar qabul qilish"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Eslatmalar davriyligi"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"Ogohlantirish xabarini ijro qilish"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"Simsiz favqulodda ogohlantirish xabarlarini eshitish uchun matndan-nutqqa vositasidan foydalanish"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Eslatma tovushi odatdagi balandlikda yangraydi"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Favqulodda xabarlar arxivi"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"Ogohlantirish parametrlari"</string>
