--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -18,8 +18,12 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="2008319089248760277">"Izexwayiso ezingenantambo zesimo esiphuthumayo"</string>
     <string name="sms_cb_settings" msgid="9021266457863671070">"Izexwayiso ezingenantambo zesimo esiphuthumayo"</string>
-    <string name="sms_cb_sender_name" msgid="7548466291720451777">"Izexwayiso zesimo esiphuthumayo"</string>
-    <string name="sms_cb_non_emergency_sender_name" msgid="3274624200561218662">"Isaziso esingokolwazi"</string>
+    <string name="sms_cb_sender_name_default" msgid="972946539768958828">"Izexwayiso zesimo esiphuthumayo"</string>
+    <!-- no translation found for sms_cb_sender_name_presidential (5302753979711319380) -->
+    <skip />
+    <!-- no translation found for sms_cb_sender_name_emergency (2937067842997478965) -->
+    <skip />
+    <string name="sms_cb_sender_name_public_safety" msgid="5230033387708907922">"Isaziso esingokolwazi"</string>
     <string name="cell_broadcast_settings_not_available" msgid="3908142962162375221">"Izilungiselelo zesexwayiso esingenantambo sesimo esiphuthumayo azitholakaleli lo msebenzisi"</string>
     <string name="button_dismiss" msgid="1234221657930516287">"KULUNGILE"</string>
     <string name="no_cell_broadcasts" msgid="7554779730107421769">"Azikho izexwayiso zangaphambilini"</string>
@@ -59,6 +63,8 @@
     <string name="enable_alerts_master_toggle_title" msgid="1457904343636699446">"Vumela izexwayiso"</string>
     <string name="enable_alerts_master_toggle_summary" msgid="5583168548073938617">"Thola izaziso ezingenantambo zezexwayiso zesimo esiphuthumayo"</string>
     <string name="alert_reminder_interval_title" msgid="3283595202268218149">"Isikhumbuzo sesaziso"</string>
+    <string name="enable_alert_speech_title" msgid="8052104771053526941">"Khuluma isaziso somlayezo"</string>
+    <string name="enable_alert_speech_summary" msgid="2855629032890937297">"Sebenzisa ukuguqula-umbhalo-ube inkulumo ukuze ukhulume imilayezo yesexwayiso esingenantambo sesimo esiphuthumayo"</string>
     <string name="alert_reminder_dialog_title" msgid="2299010977651377315">"Umsindo wesikhumbuzi uzodlala ngevolomu evamile"</string>
     <string name="emergency_alert_history_title" msgid="8310173569237268431">"Umlando wesexwayiso esiphuthumayo"</string>
     <string name="alert_preferences_title" msgid="6001469026393248468">"Izintandokazi zesexwayiso"</string>
